--- a/replica-set/01/replica-set.yml
+++ b/replica-set/01/replica-set.yml
@@ -17,4 +17,19 @@ spec:
     spec:
       containers:
         - name: httpd
-          image:
+          image: naveenthangella/rs01:v1
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: rs01-service
+spec:
+  type: LoadBalancer
+  selector:
+    tier: frontend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+---
